tests/application/gateway-api-custom-cert-blocker/application-legacy.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: blocked-app
spec:
  image: image
  port: 8080
  ingresses:
    - blocked-app.example.com+blocked-app-custom-tls
