tests/application/gateway-api-custom-cert-blocker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-custom-cert-blocker
  labels:
    istio.io/rev: asm-stable
