tests/application/gateway-api-custom-cert-blocker/blocked-assert.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: blocked-app
  namespace: gateway-api-custom-cert-blocker
status:
  conditions:
    - type: Ready
      status: "False"
      reason: CustomCertificateMissing
    - type: InternalRulesValid
      status: "True"
      reason: ApplicationReconciled
    - type: ExternalRulesValid
      status: "True"
      reason: ApplicationReconciled
    - type: LegacyRoutingActive
      status: "True"
      reason: LegacyRoutingActive
    - type: StandardRoutingReady
      status: "False"
      reason: CustomCertificateMissing
